deploy/venta_guiada_pedido/objects/Order.object
<CustomObject>
    <fields>
        <fullName>SapStatus__c</fullName>
        <description>All countries. Ciclo SAP del pedido de venta guiada: Borrador, Enviado a SAP, Confirmado SAP, Facturado, Error SAP. La factura llega por actualización inbound de MuleSoft; la assetización ocurre SOLO en Facturado.</description>
        <label>Estado SAP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrador</fullName>
                    <default>true</default>
                    <label>Borrador</label>
                </value>
                <value>
                    <fullName>Enviado a SAP</fullName>
                </value>
                <value>
                    <fullName>Confirmado SAP</fullName>
                </value>
                <value>
                    <fullName>Facturado</fullName>
                </value>
                <value>
                    <fullName>Error SAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SapOrderNumber__c</fullName>
        <description>All countries. Número del pedido SAP (Z301/Z300 vehículos, orden SD/DBM). External ID: llave del update inbound de MuleSoft.</description>
        <externalId>true</externalId>
        <label>Número de Pedido SAP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapInvoiceNumber__c</fullName>
        <description>All countries. Número de la factura SAP; lo escribe el update inbound de MuleSoft al facturar y dispara el flujo de entrega.</description>
        <label>Número de Factura SAP</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapInvoiceDate__c</fullName>
        <description>All countries. Fecha de la factura SAP; la escribe el update inbound de MuleSoft al facturar.</description>
        <label>Fecha de Factura SAP</label>
        <type>Date</type>
    </fields>
</CustomObject>